# tyler-d

./: .env.template  .gitignore  AGENTS.md  README.md  SOUL.md  docker-compose.yml  mission.md
protos/: llm.proto  ocr.proto  tscherepacha.proto  tyler_d.proto
schema/: thoughts_collection.json
services/cli/: Cargo.toml  build.rs
services/cli/src/: main.rs
services/gui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json
services/gui/src/: App.vue  main.ts
services/gui/src/api/: client.ts
services/gui/src/assets/: main.css
services/gui/src/components/: Chat.vue  Ingest.vue  TylerD.vue
services/gui/src/i18n/: index.ts  pl.json
services/gui/src/stores/: ingest.ts  messages.ts
services/llm_gateway/: Cargo.toml  Dockerfile  build.rs
services/llm_gateway/src/: config.rs  main.rs
services/llm_gateway/src/provider/: gemini.rs  mod.rs  ollama.rs  openai.rs
services/ocr/: Dockerfile  codegen.py  main.py  ocr_pb2.py  ocr_pb2_grpc.py  requirements.txt
services/orchestrator/: Cargo.toml  Dockerfile  build.rs
services/orchestrator/src/: config.rs  main.rs  server.rs  test_qdrant.rs
services/orchestrator/src/llm/: mod.rs  ollama.rs
services/orchestrator/src/ocr/: mod.rs
services/orchestrator/src/storage/: mod.rs  qdrant.rs
services/orchestrator/tests/: blackbox_e2e.rs  robust_e2e.rs
