[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tonic = "0.11"
prost = "0.12"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
async-openai = "0.20" # For Ollama/Gemini compatibility
qdrant-client = "=1.10.1"
futures = "0.3"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.11"
